theme/bootstrapbase/less/moodle/modules.less
/* modules.less */

// The home for small tweaks to modules that don't require
// changes drastic enough to pull in the full module css
// and replace it completely
// Plus some misc. odds and ends

select {
    width: auto;
}

// Forum

.path-mod-forum .forumheaderlist,
.path-mod-forum .forumheaderlist td {
    border: none;
}

.path-mod-forum .forumheaderlist {
    thead .header {
        white-space: normal;
        vertical-align: top;
    }
    thead .header.lastpost {
        text-align: right;
    }
    .discussion {
        .author, .replies, .lastpost {
            white-space: normal;
        }
        .replies {
            text-align: center;
        }
        .topic, .topic.starter, .picture, .author, .replies, .lastpost {
            vertical-align: top;
        }
    }
}

.path-mod-feedback .generalbox div table tbody img {
    height: 5px; // we should remove the bar height specification in core
}

.forumpost {
    .well;
    padding: 6px;
    .header {
        margin-bottom: 3px;
    }
    .maincontent {
        .left {
            padding: 0 10px 0 10px;
        }
    }
}

.forumpost .row .left {
    width: auto;
}

.forumpost .options .commands {
    margin-left: 0;
}

.forumpost .subject {
    font-weight: bold;
}

// Override hardcoded forum modules styling
.forumsearch input[type=text] {
     margin-bottom: 0 !important;
}

#page-mod-forum-discuss .discussioncontrol.displaymode {
    text-align: left;
}

#page-mod-forum-discuss .discussioncontrols .discussioncontrol {
    float: left;
}

#page-footer {
    margin-top: 1em;
    padding: 1em 0;
    border-top: 2px solid #eee;
}

.maincalendar .calendarmonth td,.maincalendar .calendarmonth th {
    border: 1px dotted #ddd;
}

.path-grade-report-grader h1 {
    text-align: inherit;
}

#page-mod-chat-gui_basic input#message {
    max-width: 100%;
}

#page-mod-data-view #singleimage {
    width: auto;
}

.path-mod-data form {
    margin-top: 10px;
}

.template_heading {
    margin-top: 10px;
}

.breadcrumb-button {
    float: right;
    margin-top: 4px;
}

.dir-rtl {
    .nav-tabs > li,
    .nav-pills > li {
        float: right;
    }
}
.dir-rtl .navbar .brand {
    float: right;
}

.navbar-inverse .logininfo a {
    color: @navbarInverseLinkColor;
}
.navbar-inverse .logininfo a:hover {
    background-color: @navbarInverseLinkBackgroundHover; // "transparent" is default to differentiate :hover/:focus from .active
    color: @navbarInverseLinkColorHover;
}

.navbar-fixed-top,
.navbar-fixed-bottom {
    z-index: 4030;
}

.dir-rtl .breadcrumb-button,
.dir-rtl .navbar .btn-navbar {
    float: left;
}

.ie .row-fluid .desktop-first-column {
    margin-left: 0;
}
.langmenu form {
    margin: 0;
}
.container-fluid {
    max-width: 1680px;
    margin: 0 auto;
}
// contributed by Paul Hibbitts, see http://msdn.microsoft.com/en-us/library/ie/jj583807(v=vs.85).aspx
canvas {
    -ms-touch-action: auto;
}

div#dock {
    display: none;
}

.path-mod-choice {
    .horizontal  .choices {
        margin: 0;
        .option {
            display: inline-block;
            padding: 10px;
        }
    }
    .results .data {
        white-space: normal;
    }
}

.path-mod-lesson .firstpageoptions {
    margin: auto;
    min-width: 280px;
    width: 60%;
}

.path-mod-lesson .centerpadded {
    padding: 5px;
    text-align: center;
}

.path-mod-wiki .wiki_headingtitle,
.path-mod-wiki .midpad,
.path-mod-wiki .wiki_headingtime {
    text-align: inherit;
}

.path-mod-wiki .wiki_contentbox {
    width: 100%;
}

// Survey module

.path-mod-survey {
    .surveytable {
        .r0 {background-color: #eee;}
        .r1 {background-color: #ddd;}
        .rblock label {text-align: center;}
    }
    .resultgraph, .reportsummary, .studentreport, .reportbuttons, .centerpara {
        text-align:center;
    }
}
// rtl overrides
.dir-rtl {
    .path-mod-forum .forumheaderlist {
        thead .header.lastpost {
            text-align: left;
        }
    }
}

